added automation tests and readme file
